# ai-trading-bot

./: .coveragerc  .cursorrules  .dockerignore  .documentation-maintenance-summary.md  .env.example  .gitignore  .pr_review_diff.txt  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  BACKTEST_RESULTS_COMPARISON.md  BEATING_BUY_AND_HOLD_ANALYSIS.md  BREAKTHROUGH_RESULTS.md  CLAUDE.md  CODE.md  CONTRIBUTING.md  CURSOR_RULES.md  DATABASE_LOGGING_GUIDE.md  DOCUMENTATION_AUDIT_2025-10-07.md  DOCUMENTATION_AUDIT_2025-10-12.md  DOCUMENTATION_AUDIT_2025-10-16.md  DOCUMENTATION_AUDIT_2025-11-04.md  DOCUMENTATION_AUDIT_2025-11-05.md  DOCUMENTATION_AUDIT_2025-11-06.md  DOCUMENTATION_AUDIT_2025-11-07.md  DOCUMENTATION_AUDIT_2025-11-08.md  DOCUMENTATION_AUDIT_2025-11-09.md  DOCUMENTATION_AUDIT_2025-11-10.md  DOCUMENTATION_AUDIT_2025-11-11.md  DOCUMENTATION_AUDIT_2025-11-12.md  DOCUMENTATION_AUDIT_2025-11-13.md  DOCUMENTATION_AUDIT_2025-11-14.md  DOCUMENTATION_AUDIT_2025-11-15.md  DOCUMENTATION_AUDIT_2025-11-17.md  DOCUMENTATION_AUDIT_2025-11-18.md  DOCUMENTATION_AUDIT_2025-11-24.md  DOCUMENTATION_AUDIT_2025-11-27.md  DOCUMENTATION_AUDIT_2025-11-29.md  DOCUMENTATION_AUDIT_2025-12-13.md  DOCUMENTATION_AUDIT_2025-12-17.md  (+85 more)
.agents/: PLANS.md
.claude/: LESSONS.md  launch.json  settings.json  statusline.cjs
.codex/: auth.json  config.toml  history.jsonl  version.json
.cursor/: Dockerfile  Dockerfile.cursor  environment.json  mcp.json  setup.sh  supervisord.conf
.gemini-reviews/: pr561-review.md  pr561.diff  pr562-review.md  pr562.diff  pr563-review.md  pr563.diff  pr564-review.md  pr564.diff  pr565-review.md  pr565.diff
.github/: copilot-instructions.md  pull_request_template.md
.knowledge-graph/: index.js
.pytest_db/: ai_trading_tests.sqlite
artifacts/: optimizer_report_mock.json
backtesting/: __init__.py  engine.py
binance/: __init__.py
boto3/: __init__.py
botocore/: __init__.py
ccxt/: __init__.py
cli/: __init__.py  __main__.py
config/: __init__.py  settings.py
data/: BTCUSDT_1d.csv  ETHUSDT_1d.csv  btcusdt.csv  senticrypt_sentiment_data.csv  sentiment_aligned_output.csv  sentiment_cache_BTC_2022.csv  sentiment_cache_BTC_20240617_20250617.csv  trading_bot.db
deploy/: DEPLOYMENT_CHECKLIST.md  aws_setup.sh  aws_setup_production.sh  aws_setup_staging.sh  bootstrap.sh  (+1 more)
(+1604 files in other folders)
