[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E","F","I","B","UP"]
ignore = ["E203","E501","E402"]

[tool.ruff.lint.isort]
known-first-party = ["config","data_providers","database","live","monitoring","prediction","risk","strategies","utils","backtesting"]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-trading-bot"
version = "0.1.0"
description = "AI Trading Bot CLI and tools"
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
atb = "cli.__main__:main"

[tool.setuptools.packages.find]
include = ["cli*"]