[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E","F","I","B","UP"]
ignore = ["E203","E501","E402"]

[tool.ruff.lint.isort]
known-first-party = ["src","config","data_providers","database","live","monitoring","prediction","risk","strategies","utils","backtesting"]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-trading-bot"
version = "0.1.0"
description = "AI Trading Bot CLI and tools"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "python-binance>=1.0.19",
    "pandas>=2.1.4",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.2",
    "scikit-learn>=1.3.2",
    "requests>=2.31.0",
    "textblob>=0.17.1",
    "nltk>=3.8.1",
    "ccxt>=4.4.85",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "psutil>=5.9.6",
    "onnxruntime>=1.17.0",
    "Flask>=2.3.3",
    "Flask-SocketIO>=5.3.6",
    "Flask-Admin>=1.6.1",
    "onnx>=1.14.0",
    "gevent>=25.8.2",
    "gevent-websocket>=0.10.1",
    "alembic>=1.13.1",

]

[project.scripts]
atb = "cli.__main__:main"

[tool.setuptools.packages.find]
include = ["cli*", "src*"]
