[metadata]
name = ai-trading-bot
version = 0.1.0
description = AI Trading Bot CLI and tools
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
include = cli*

[options.entry_points]
console_scripts =
    atb = cli.__main__:main


